--- a/foo/CMakeLists.txt
+++ b/foo/CMakeLists.txt
@@ -8,7 +8,9 @@ add_executable(${EXAMPLE_NAME}
 set_target_properties(${EXAMPLE_NAME} PROPERTIES LINKER_LANGUAGE C)
 
 if(COMMAND loopc14n_pipeline)
-  loopc14n_pipeline(NAME ${EXAMPLE_NAME} DEPENDS ${EXAMPLE_NAME})
+  loopc14n_pipeline(DEPENDS ${EXAMPLE_NAME} MAIN_TARGET PLINE_FOO_TRG1)
+
+  message(STATUS "loopc14n pipeline main target: ${PLINE_FOO_TRG1}")
 endif()
 
 # installation
