report intermediate pipeline targets

--- a/foo/CMakeLists.txt
+++ b/foo/CMakeLists.txt
@@ -8,9 +8,12 @@ add_executable(${EXAMPLE_NAME}
 set_target_properties(${EXAMPLE_NAME} PROPERTIES LINKER_LANGUAGE C)
 
 if(COMMAND loopc14n_pipeline)
-  loopc14n_pipeline(DEPENDS ${EXAMPLE_NAME} MAIN_TARGET PLINE_FOO_TRG1)
+  loopc14n_pipeline(DEPENDS ${EXAMPLE_NAME} 
+    MAIN_TARGET PLINE_FOO_TRGT1
+    TARGET_LIST PLINE_FOO_TRGTS)
 
-  message(STATUS "loopc14n pipeline main target: ${PLINE_FOO_TRG1}")
+  message(STATUS "loopc14n pipeline main target: ${PLINE_FOO_TRGT1}")
+  message(STATUS "loopc14n pipeline intermediate targets: ${PLINE_FOO_TRGTS}")
 endif()
 
 # installation
