--- a/bar/CMakeLists.txt
+++ b/bar/CMakeLists.txt
@@ -7,13 +7,13 @@ add_executable(${EXAMPLE_NAME}
 
 set_target_properties(${EXAMPLE_NAME} PROPERTIES LINKER_LANGUAGE C)
 
-if(COMMAND loopc14n_pipeline)
-  loopc14n_pipeline(DEPENDS ${EXAMPLE_NAME}
-    MAIN_TARGET PLINE_FOO_TRGT1
-    TARGET_LIST PLINE_FOO_TRGTS)
+if(COMMAND loopc14n)
+  loopc14n(DEPENDS ${EXAMPLE_NAME}
+    MAIN_TARGET PLINE_TRGT1
+    TARGET_LIST PLINE_TRGTS)
 
-  message(STATUS "loopc14n pipeline main target: ${PLINE_FOO_TRGT1}")
-  message(STATUS "loopc14n pipeline intermediate targets: ${PLINE_FOO_TRGTS}")
+  message(STATUS "loopc14n pipeline main target: ${PLINE_TRGT1}")
+  message(STATUS "loopc14n pipeline intermediate targets: ${PLINE_TRGTS}")
 endif()
 
 # installation
