fix source language used

--- a/statically/foo/CMakeLists.txt
+++ b/statically/foo/CMakeLists.txt
@@ -3,9 +3,9 @@
 set(EXAMPLE_NAME "foo")
 
 add_executable(${EXAMPLE_NAME}
-  ${EXAMPLE_NAME}.c)
+  ${EXAMPLE_NAME}.cpp)
 
-set_target_properties(${EXAMPLE_NAME} PROPERTIES LINKER_LANGUAGE C)
+set_target_properties(${EXAMPLE_NAME} PROPERTIES LINKER_LANGUAGE CXX)
 
 if(COMMAND loopc14n)
   loopc14n(DEPENDS ${EXAMPLE_NAME}
