--- a/dynamically/baz/CMakeLists.txt
+++ b/dynamically/baz/CMakeLists.txt
@@ -5,7 +5,7 @@ set(EXAMPLE_NAME "baz")
 add_executable(${EXAMPLE_NAME}
   ${EXAMPLE_NAME}.cpp)
 
-set_target_properties(${EXAMPLE_NAME} PROPERTIES LINKER_LANGUAGE C)
+set_target_properties(${EXAMPLE_NAME} PROPERTIES LINKER_LANGUAGE CXX)
 
 
 foreach(FRAGMENT ${FRAGMENT_FILES})
