--- a/statically/foo/CMakeLists.txt
+++ b/statically/foo/CMakeLists.txt
@@ -7,13 +7,13 @@ add_executable(${EXAMPLE_NAME}
 
 set_target_properties(${EXAMPLE_NAME} PROPERTIES LINKER_LANGUAGE CXX)
 
-if(COMMAND loopc14n)
-  loopc14n(DEPENDS ${EXAMPLE_NAME}
+if(COMMAND loopc14n_full)
+  loopc14n_full(DEPENDS ${EXAMPLE_NAME}
     MAIN_TARGET PLINE_TRGT1
     TARGET_LIST PLINE_TRGTS)
 
-  message(STATUS "loopc14n pipeline main target: ${PLINE_TRGT1}")
-  message(STATUS "loopc14n pipeline intermediate targets: ${PLINE_TRGTS}")
+  message(STATUS "loopc14n_full pipeline main target: ${PLINE_TRGT1}")
+  message(STATUS "loopc14n_full pipeline intermediate targets: ${PLINE_TRGTS}")
 endif()
 
 # installation
